# Beta

./: CMakeLists.txt  Makefile  README.md  main.cpp  parameters.txt
action/: action.hpp
context/: context.hpp
core/: action.hpp  context.hpp  network.hpp  parameters.h  parameters.hpp  state.hpp  threadpool.hpp
mcts/: mcts.hpp  tree.hpp
proto/: beta.pb.cc  beta.pb.h  beta.proto
test/: test_tree.cc
